<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="vertical" >
        

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gpsFix"
                android:textAppearance="?android:attr/textAppearanceLarge"/>
            <TextView
                android:id="@+id/textViewFix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gpsFixValue"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latitude"
                android:textAppearance="?android:attr/textAppearanceLarge"/>
            
            <TextView
                android:id="@+id/textViewLatitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gpsFixValue"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longitude"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            
            <TextView
                android:id="@+id/textViewLongitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gpsFixValue"
                android:textAppearance="?android:attr/textAppearanceMedium"
                />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/altitude"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            
            <TextView
                android:id="@+id/textViewAltitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gpsFixValue"
                android:textAppearance="?android:attr/textAppearanceMedium"
                />

        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/target"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            
            <TextView
                android:id="@+id/textViewTarget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selectTarget"
                android:textAppearance="?android:attr/textAppearanceMedium"
                />

        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            
            <TextView
                android:id="@+id/textViewDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selectTarget"
                android:textAppearance="?android:attr/textAppearanceMedium"
                />

        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:paddingTop="40dp"
            android:gravity="center_horizontal"
            >

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saveLocation" />
            
            <Button
                android:id="@+id/buttonSelect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selectTarget" />
            
        </TableRow>
</TableLayout>